Giving a z-index to #sectionTitleFixed seems to help IE using the <a href="#top"> links correctly.

--- a/spincast-website/src/main/resources/public/css/main.css
+++ b/spincast-website/src/main/resources/public/css/main.css
@@ -855,6 +855,7 @@ pre {
     position:fixed;
     top:0px;
     visibility: hidden;
+    z-index:1000;
 }
 
 #sectionTitleFixed.affix {
